# jobfire

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/examples/: simple.rs
crates/core/src/: lib.rs
crates/core/src/builders/: job_actions_registry.rs  job_manager.rs  job_scheduler.rs  jobfire_manager.rs  mod.rs
crates/core/src/domain/: error.rs  job.rs  mod.rs
crates/core/src/domain/job/: context.rs  data.rs  error.rs  failed.rs  id.rs  impl.rs  mod.rs  pending.rs  policy.rs  report.rs  running.rs  scheduler.rs  successful.rs
crates/core/src/domain/run/: failed.rs  id.rs  job_actions.rs  mod.rs  successful.rs
crates/core/src/managers/: error.rs  job_impl_manager.rs  job_manager.rs  job_scheduler.rs  jobfire_manager.rs  mod.rs
crates/core/src/persistence/: error.rs  job.rs  mod.rs
crates/core/src/policies/: instant_retry.rs  mod.rs  timeout.rs
crates/core/src/registries/: builders.rs  job_actions.rs  mod.rs  policies.rs
crates/core/src/runners/: job.rs  mod.rs  on_fail.rs  on_success.rs
crates/core/src/runners/simple/: job.rs  on_fail.rs  on_success.rs
crates/core/src/services/: builder.rs  mod.rs  time.rs  verify.rs
crates/core/src/storage/: error.rs  job.rs  mod.rs  run.rs
crates/core/src/storage/memory/: mod.rs
crates/core/src/storage/memory/job/: mod.rs  pending.rs  running.rs
crates/core/src/storage/memory/run/: failed.rs  mod.rs  successful.rs
crates/core/src/util/: async.rs
crates/core/src/workers/: error.rs  job.rs  mod.rs
crates/extensions/ephemeral/: Cargo.toml
crates/extensions/ephemeral/examples/: ephemeral.rs
crates/extensions/ephemeral/src/: context.rs  context_data.rs  ephemeral_fn_registry.rs  impl.rs  job.rs  lib.rs
crates/extensions/recurring/: Cargo.toml
crates/storage/in-memory/: Cargo.toml
crates/storage/in-memory/src/: failed_job.rs  job.rs  lib.rs  macros.rs  pending_job.rs  running_job.rs  successful_job.rs
crates/storage/in-memory/src/job/: failed.rs  mod.rs  pending.rs  running.rs  successful.rs
crates/storage/sqlite/: Cargo.toml
crates/storage/sqlite/examples/: sqlite.rs
crates/storage/sqlite/src/: lib.rs
crates/storage/sqlite/src/job/: mod.rs  pending.rs  running.rs
crates/storage/sqlite/src/run/: failed.rs  successful.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
