[workspace]
members = ["crates/core"]
resolver = "2"

[workspace.dependencies]
jobfire-core = { path = "./crates/core/" }
log = { version = "0.4.26" }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.15.1", features = ["v7"] }
cron = { version = "0.15.0", features = ["serde"] }
chrono = { version = "0.4.40", features = [] }
typetag = { version = "0.2.20" }
async-trait = { version = "0.1.87" }
tokio = { version = "1.44.1", features = ["full"] }
getset = { version = "0.1.5" }
quick-macros = { version = "0.1.2" }
thiserror = { version = "2.0.12" }
