[workspace]
members = [
  "crates/core",
  "crates/extensions/ephemeral",
  "crates/extensions/recurring",
  "examples/simple",
]
resolver = "2"

[workspace.dependencies]
jobfire-core = { path = "./crates/core/" }
jobfire-ephemeral = { path = "./crates/extensions/ephemeral/" }
log = { version = "0.4.26" }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
uuid = { version = "1.15.1", features = ["v7", "serde"] }
cron = { version = "0.15.0", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = { version = "0.1.87" }
tokio = { version = "1.44.1", features = ["full"] }
getset = { version = "0.1.5" }
quick-macros = { version = "0.1.2" }
thiserror = { version = "2.0.12" }
simple_logger = { version = "5.0.0" }
