[package]
name = "jobfire-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
serde.workspace = true
uuid.workspace = true
cron.workspace = true
chrono.workspace = true
typetag.workspace = true
async-trait.workspace = true
tokio.workspace = true
derive-getters.workspace = true
